<resources>
    <string name="app_name">MyHouseCoins</string>
    <string name="myhousemoney">我的房屋币</string>
    <string name="more">...</string>
    <string name="_16680">16680</string>
    <string name="housemoneydetail">房屋币明细</string>
    <string name="market">商城</string>
    <string name="mytask">我的任务</string>
    <string name="paihang">排行榜</string>
    <string name="__10">+10</string>
    <string name="watch">观看梵讯大学课程</string>
    <string name="watchvideo">观看完整的课程视频才得房屋币</string>
    <string name="towatch">去观看</string>
    <string name="_10_">+10</string>
    <string name="share">分享梵讯大学课程</string>
    <string name="_50">单个视频需他人浏览累计超过50次</string>
    <string name="toshare">去分享</string>
    <string name="_5">+5</string>
    <string name="add">添加好友</string>
    <string name="_4">主动添加好友，每天最多4次</string>
    <string name="toadd">去添加</string>
    <string name="_50_">+50</string>
    <string name="share_">邀请注册</string>
    <string name="_4_">已成功邀请4人注册手机梵讯</string>
    <string name="_toinvite">去邀请</string>
    <string name="_200">+200</string>
    <string name="to_invite">邀请开通</string>
    <string name="_2">已成功邀请2人开通手机梵讯</string>
    <string name="toinvite">去邀请</string>
    <string name="_10">+10</string>
    <string name="txt_rank">排名</string>
    <string name="txt_name">姓名</string>
    <string name="txt_coins">房屋币</string>
    <string name="txt_watch_course">观看梵讯大学课程</string>
    <string name="mock_time">2017-10-10 08:15</string>
    <string name="plus_200">+200</string>
    <string name="txt_income">收入</string>
    <string name="txt_expense">支出</string>
    <string name="txt_coins_record_detail">房屋币明细</string>
</resources>
