<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_income_expense_describtion"
                android:text="@string/txt_watch_course"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@color/text_black"
                android:layout_marginTop="10dp"
                android:includeFontPadding="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_income_expense_time"
                android:text="@string/mock_time"
                android:textColor="@color/gray_no_effect"
                android:includeFontPadding="false"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_income_expense_amount"
            android:text="@string/plus_200"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textColor="@color/text_blue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View android:id="@+id/divide_line"
        style="@style/line_separator"/>

</LinearLayout>

