<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/common_body_background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/txt_rank"
            android:gravity="start"
            android:textSize="15sp"
            android:textColor="@color/textcolor_darkgray"
            android:layout_width="0dp"
            android:layout_weight="17"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/txt_name"
            android:gravity="left"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="17"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/txt_coins"
            android:gravity="end"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="17"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_my_ranking"
                android:minWidth="30dp"
                android:text="@string/txt_rank"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/text_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_my_name"
            android:text="@string/txt_name"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:textSize="15sp"
            android:textColor="@color/text_blue"
            android:layout_width="0dp"
            android:layout_weight="17"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_my_coins"
            android:text="@string/txt_coins"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:textSize="15sp"
            android:textColor="@color/text_blue"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_ranking_list"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
