<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_body_background_color">

    <include
        android:id="@+id/TitleBarGuideLayout"
        layout="@layout/titlebar_guide"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:background="@drawable/bg_gradient"
        android:layout_below="@+id/TitleBarGuideLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_coins_count"
            android:textColor="#ffffff"
            android:textSize="36sp"
            android:textStyle="bold"
            android:scaleX="1.05"
            android:includeFontPadding="false"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_record_detail"
            android:layout_below="@+id/tv_coins_count"
            android:text="@string/housemoneydetail"
            android:gravity="start"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:drawableEnd="@mipmap/ic_activity_main_detail"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:drawablePadding="2dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_shop"
            android:text="@string/market"
            android:gravity="center"
            android:textSize="14sp"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textColor="#ffffff"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/bg_record_detail"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/ic_activity_main_shoppingcar"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:id="@+id/switch_tab_container"
    android:layout_marginStart="13dp"
    android:layout_marginEnd="13dp"
    android:background="@drawable/bg_switch_tab_container"
    android:layout_below="@id/TitleBarGuideLayout"
    android:layout_marginTop="118dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="@drawable/bg_ripple_with_corner"
        android:id="@+id/my_task_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_mytask"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/mytask"
            android:textSize="17sp"
            android:textColor="@color/coins_main"/>

        <View
            android:id="@+id/my_task_bar"
            android:layout_below="@+id/tv_mytask"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_selector"
            android:layout_marginTop="10dp"
            android:layout_width="25dp"
            android:layout_height="3dp" />

    </RelativeLayout>
    <View
        android:layout_gravity="center"
        android:background="@color/gray_no_effect"
        android:layout_width="1dp"
        android:layout_height="35dp"/>

    <RelativeLayout
        android:id="@+id/ranking_list_container"
        android:background="@drawable/bg_ripple_with_corner"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

    <TextView
        android:id="@+id/tv_ranking_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/paihang"
        android:layout_marginTop="13dp"
        android:textColor="@color/gray_no_effect"
        android:textSize="17sp" />

    <View
        android:id="@+id/ranking_list_bar"
        android:visibility="invisible"
        android:layout_below="@+id/tv_ranking_list"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_selector"
        android:layout_marginTop="10dp"
        android:layout_width="25dp"
        android:layout_height="3dp" />
    </RelativeLayout>

    </LinearLayout>
    <com.android.byc.myhousecoins.view.NoScrollViewPager
        android:id="@+id/view_pager"
        android:layout_below="@id/switch_tab_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>